Door holograms, code refactor